# griffith

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md  architecture.md  tutorial.md
examples/: add_alternative_isoform.py  create_minimal_annotation.py  filter_validate_write.py  gencode50_basic_annotation.ipynb  griffith_vs_gffutils_gencode50_basic_annotation.ipynb
src/griffith/: __init__.py  attributes.py  cli.py  core.py  exceptions.py  types.py
tests/: test_attributes.py  test_core.py
tests/data/: broken.gff3  broken.gtf  toy.gff3  toy.gtf
