[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "griffith"
version = "0.1.0"
description = "A fast, Polars-backed Python library for GFF/GTF manipulation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Niccolò Liorni", email = "niccololiorni@gmail.com"  }
]
keywords = [
    "bioinformatics",
    "gff",
    "gtf",
    "genomics",
    "polars",
    "annotation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "polars>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
griffith = "griffith.cli:main"

[project.urls]
Homepage = "https://github.com/nliorni/griffith"
Repository = "https://github.com/nliorni/griffith"
Issues = "https://github.com/nliorni/griffith/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/griffith"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests", "examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "PL"]
ignore = [
    "PLR0913",
    "PLR2004",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_return_any = true
show_error_codes = true
packages = ["griffith"]
